# catpossible

./: README.md  pyproject.toml
catpossible/: __main__.py  cli.py  detector.py
