[tool.poetry]
name = "catpossible"
version = "0.1.0"
description = "Filter out cat photos from your photo archives."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
detecto = "^1.1.3"
click = "^7.1.1"
tqdm = "^4.45.0"
pyemojify = "^0.2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.2"

[tool.poetry.scripts]
catpossible = 'catpossible.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
